--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,6 +34,9 @@ jobs:
     - name: Grant execute permission to Gradle wrapper
       run: chmod +x ./gradlew
 
+    - name: Change to app directory
+      run: cd app
+
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
