--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,6 +37,31 @@ jobs:
     - name: Build with Gradle Wrapper
       run: ./gradlew build
 
+  lint:
+
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+
+      - name: Grant execute permission to Gradle wrapper
+        run: chmod +x ./gradlew
+
+      - name: Check style - Main
+        run: ./gradlew checkstyleMain
+
+      - name: Check style - Tests
+        run: ./gradlew checkstyleTest
   dependency-submission:
 
     runs-on: ubuntu-latest
