--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -62,6 +62,10 @@ jobs:
 
       - name: Check style - Tests
         run: ./gradlew checkstyleTest
+
+      - name: Check report output
+        run: app/scripts/check_lint_output.sh
+
   dependency-submission:
 
     runs-on: ubuntu-latest
