Added script to parse linter output

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -64,7 +64,7 @@ jobs:
         run: ./gradlew checkstyleTest
 
       - name: Check report output
-        run: app/scripts/check_lint_output.sh
+        run: chmod +x app/scripts/check_lint_output.sh && app/scripts/check_lint_output.sh
 
   dependency-submission:
 
