--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -103,6 +103,8 @@ jobs:
       - name: Generate JaCoCo Badge
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
+        with:
+          jacoco-csv-file: build/reports/jacoco/jacocoTestReport.csv
 
       - name: Log coverage percentage
         run: |
