Add command to execute tests

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -100,6 +100,9 @@ jobs:
       - name: Grant execute permission to Gradle wrapper
         run: chmod +x ./gradlew
 
+      - name: Test
+        run: ./gradlew clean test
+
       - name: Generate JaCoCo Badge
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
