--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -85,6 +85,8 @@ jobs:
 
   unit-tests:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
